[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/Gamer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/icons/pause.png" type="Texture" id=3]
[ext_resource path="res://game_objects/ui/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/restart.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/menu.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 362.0
margin_top = 21.0
margin_right = 611.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 362.0
margin_top = 139.0
margin_right = 611.0
margin_bottom = 196.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 944.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 72.0
size_flags_stretch_ratio = 0.25
texture_normal = ExtResource( 3 )

[node name="PauseDialog" type="WindowDialog" parent="."]
pause_mode = 2
margin_left = 456.0
margin_top = 216.0
margin_right = 568.0
margin_bottom = 376.0
window_title = "Pause"

[node name="RestartButton" type="TextureButton" parent="PauseDialog"]
margin_left = 24.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )

[node name="MenuButton" type="TextureButton" parent="PauseDialog"]
margin_left = 24.0
margin_top = 88.0
margin_right = 88.0
margin_bottom = 152.0
texture_normal = ExtResource( 6 )

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="popup_hide" from="PauseDialog" to="." method="_on_PauseDialog_popup_hide"]
[connection signal="pressed" from="PauseDialog/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseDialog/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
